# whiteboard-api

./: Dockerfile  README.md  db.sqlite3  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
wb_api_project/: .env  asgi.py  settings.py  urls.py  wsgi.py
wb_app/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
wb_app/migrations/: 0001_initial.py  0002_categorynotes_classlist_scoretable_student_whiteboard_whiteboardimage.py  0003_alter_student_scheduled.py  0003_auto_20210511_0341.py
